--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.4
+  riverpod: ^2.3.6
   transparent_image: ^2.0.1
 
 dev_dependencies:
