--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   google_fonts: ^4.0.4
-  riverpod: ^2.3.6
   transparent_image: ^2.0.1
 
 dev_dependencies:
